--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
-
-- Split terminal tab into logs, events and both (tabs within the tab)
-- Plot uv power as well as index
+- Fix bug: usb process does not terminate if closed during sd dump?
 - Refresh button for historic view
 - The other graphs
 - Stop live transmit on gui exit
